# kinkeeper

./: .env.example  .gitignore  .pre-commit-config.yaml  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
bot/: main.py  scheduler.py
bot/handlers/: basic.py  health.py  query.py  weight.py
deploy/: deploy.sh  failed_alert.sh  healthz_alert.sh  install.sh  kinkeeper-bot.service  kinkeeper-web-tailscale.service  kinkeeper-web.service  pg_backup.sh
docs/: ARCHITECTURE.md  OPERATIONS.md  arch-p2-plan.json  audit-p1-confirmed.json  final-review-confirmed.json
migrations/: env.py
migrations/versions/: 3c81dda605a2_add_member_health_check_config.py  4c49e0a4fd5b_refactor_switch_to_group_channel_based_.py  50cad0b53392_초기_스키마_생성.py  699ca1657399_add_height_cm_and_diet_active_to_family_.py  92e11d193e0d_add_health_check_system.py  a1b2c3d4e5f6_scheduled_notifications_pending_partial_unique.py  b8e4f1a7c2d9_drop_diet_weight_feature.py  c7f3a9e21b04_drop_family_members_timezone.py  d4d0183e6904_add_min_age_to_health_check_types.py  ef6594748355_scheduled_notifications_rule_id_.py
shared/: config.py  config_schemas.py  dates.py  db.py  enums.py  lunar.py  models.py  notifier.py  scheduler_utils.py
shared/generators/: __init__.py  _time.py  base.py  birthday.py  custom.py  diet_report.py  health_check.py  holiday.py
tests/: conftest.py  test_config.py  test_db_schema.py  test_deploy.py  test_migrations.py  test_notifier.py
web/: README.md  auth.py  form_utils.py  main.py  templating.py
(+42 files in other folders)
