[project]
name = "kinkeeper"
version = "0.1.0"
description = "A self-hosted family assistant bot — birthdays, holidays, health check-ups, diet reports, and more via Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "korean-lunar-calendar>=0.3.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "python-telegram-bot[job-queue]>=22.7",
    "sqlalchemy[mypy]>=2.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "testcontainers[postgres]>=4.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"migrations/**" = ["ANN", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["migrations.*", "tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["shared", "bot", "web"]
omit = ["tests/*", "migrations/*"]
